<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MateriDetailActivity">
        <include layout="@layout/custom_appbar" android:id="@+id/appBar"/>

        <ImageView
            android:id="@+id/thumbnail"
            android:layout_width="133dp"
            android:layout_height="107dp"
            android:layout_marginTop="51dp"
            android:scaleType="fitXY"
            android:src="@drawable/frame_kotlin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/appBar" />
        <TextView
            android:id="@+id/nomor_soal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:layout_marginTop="51dp"
            android:text="@string/soal_1"
            android:textSize="21sp"
            android:textStyle="bold"
            android:fontFamily="@font/roboto_regular"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@+id/thumbnail" />
        <TextView
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:layout_marginTop="12dp"
            android:text="@string/quiz_fake"
            android:fontFamily="@font/roboto_regular"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@+id/nomor_soal" />
        <RadioGroup
            android:id="@+id/opsi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/java"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/java" />

            <RadioButton
                android:id="@+id/kotlin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/kotlin" />

            <RadioButton
                android:id="@+id/cpp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/c" />
        </RadioGroup>

        <ImageView
            android:id="@+id/next"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginTop="54dp"
            android:layout_marginRight="24dp"
            android:layout_marginEnd="24dp"
            android:src="@drawable/ic_baseline_arrow_orangge"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/opsi"
            />



        <ImageView
            android:id="@+id/prev"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginTop="54dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:src="@drawable/ic_baseline_arrow_back_orangge"
            app:layout_constraintStart_toStartOf="@+id/content"
            app:layout_constraintTop_toBottomOf="@+id/opsi" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            app:tint="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="ContentDescription" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
