<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">


       <include layout="@layout/custom_appbar" android:id="@+id/appBar"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="84dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/main_menu_rv"
            >
            <LinearLayout
                android:id="@+id/materi"
                android:layout_width="119dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="119dp"
                    android:layout_height="79dp"
                    android:src="@drawable/frame_kotlin"
                    tools:ignore="ContentDescription" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/materi"
                    android:fontFamily="@font/roboto_regular"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:gravity="center_horizontal" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/deskripsi_materi"
                    android:fontFamily="@font/roboto_regular"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:gravity="center_horizontal" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/forum"
                android:layout_width="119dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                tools:ignore="UseCompoundDrawables"
                android:layout_marginLeft="55dp"
                android:layout_marginStart="55dp"
                >

                <ImageView
                    android:layout_width="119dp"
                    android:layout_height="79dp"
                    android:src="@drawable/frame_kotlin"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_regular"
                    android:gravity="center_horizontal"
                    android:text="@string/forum"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_regular"
                    android:gravity="center_horizontal"
                    android:text="@string/deskripsi_forum"
                    android:textAlignment="center"
                    android:textColor="@color/black" />
            </LinearLayout>
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/main_menu_rv"
            android:layout_width="match_parent"
            android:layout_height="105dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="141dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintTop_toBottomOf="@id/main_menu_rv"

            />




        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            app:tint="@android:color/white"
            android:src="@drawable/ic_baseline_add"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="ContentDescription" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
